<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="krishna.mydemo.LoginActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/hint_id"
        android:theme="@style/EditText"
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:gravity="center"
        android:hint="@string/hint_password"
        android:theme="@style/EditText"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/txtLogin"
        android:textSize="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
